--- a/views/tests.html
+++ b/views/tests.html
@@ -4,12 +4,20 @@
   <title>Jasmine Spec Runner</title>
 
   <link rel="stylesheet" type="text/css" href="css/jasmine.css">
+  <script type="text/javascript" src="js/libs/underscore.js"></script>
   <script type="text/javascript" src="js/libs/jasmine.js"></script>
   <script type="text/javascript" src="js/libs/jasmine-html.js"></script>
 
+  <!-- sources -->
+  <script type="text/javascript" src="js/grid.js" ></script>
+  <script type="text/javascript" src="js/cell.js" ></script>
+  <script type="text/javascript" src="js/game.js" ></script>
+
   <!-- specs -->
   <script type="text/javascript" src="specs/gameoflife.spec.js" ></script>
-
+  <script type="text/javascript" src="specs/grid.spec.js" ></script>
+  <script type="text/javascript" src="specs/cell.spec.js" ></script>
+  <script type="text/javascript" src="specs/game.spec.js" ></script>
 
   <script type="text/javascript">
     (function() {
