--- a/views/tests.html
+++ b/views/tests.html
@@ -8,8 +8,15 @@
   <script type="text/javascript" src="js/libs/jasmine.js"></script>
   <script type="text/javascript" src="js/libs/jasmine-html.js"></script>
 
+  <!-- source -->
+  <script type="text/javascript" src="js/cellstate.js" ></script>
+  <script type="text/javascript" src="js/cell.js" ></script>
+  <script type="text/javascript" src="js/grid.js" ></script>
+
   <!-- specs -->
-  <script type="text/javascript" src="specs/gameoflife.spec.js" ></script>
+  <script type="text/javascript" src="specs/cell.spec.js" ></script>
+  <script type="text/javascript" src="specs/cellstate.spec.js" ></script>
+  <script type="text/javascript" src="specs/grid.spec.js" ></script>
 
 
   <script type="text/javascript">
